Fixes css breadcrumb overflow fix/docorganization

--- a/css/main.sass
+++ b/css/main.sass
@@ -108,6 +108,8 @@ details[open]
   font: 12px Sans-Serif
   margin-top: 15px
   margin-bottom: 32px
+  overflow: hidden
+  height: 34px
 
 .breadcrumb li 
   float: right
